codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 3620
expression: terminal.backend()
---
"                          "
"› Ask xcodex to do anythi "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"  Code mode               "
