codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_worktree.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› /worktree                                                 "
"                                                            "
"  /worktree detect       refresh git worktree list and open "
"                         picker                             "
"  /worktree doctor       show shared-dir + untracked status "
"                         for this worktree                  "
"  /worktree init         create a new worktree and switch to"
