codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__status_bar_branch_and_worktree_overlap.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                                            "
"› Ask xcodex to do anything                                                                                                                 "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"  ? for shortcuts                                                           …/.worktrees/feat-project-level-settings · 100% context left  "
